# rag-101

./: .env.rag101.example  .gitignore  .mcp.json  API_TEST_REPORT.md  CLAUDE.md  README.md  SECRETS.md  check-db  check_db.sh  check_embeddings.py  check_milvus.py  check_milvus_simple.py  clear_milvus.py  count_chunks.py  debug_answer_format.py  deploy.sh  docker-compose.api.yml  docker-compose.services.yml  docker-compose.simple.yml  docker-compose.yml  docker-proxy-config.md  monitor_nats.py  setup-env.sh  test_answer_listener.py  test_api_comprehensive.py  test_question.py  test_results.json  test_results_final.json  test_results_fixed.json  test_results_websocket_fixed.json  test_results_websocket_perfect.json  test_simple_qa.py
.taskmaster/: state.json
.taskmaster/docs/: prd.txt
.taskmaster/reports/: task-complexity-report.json
.taskmaster/tasks/: tasks.json
docs/: PRD.md
docs/drafts/: prd.md
scripts/: README.md  clean.sh  health-check.sh  wait-for-services.sh
services/api/: .dockerignore  Dockerfile  Dockerfile.simple  README.md  build.sh  infrastructure.py  main.py  pyproject.toml  requirements.txt
services/api/middleware/: __init__.py  error_handling.py  rate_limiter.py  session_middleware.py
services/api/routers/: __init__.py  documents.py  health.py  questions.py  sessions.py  streams.py  websocket.py
services/ui/: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
services/ui/components/: __init__.py  chat_interface.py  dashboard.py  dashboard_backup.py  document_upload.py  session_manager.py  websocket_client.py
services/worker/: .dockerignore  Dockerfile  Dockerfile.simple  README.md  __init__.py  health_check.py  main.py  pyproject.toml  requirements.txt
services/worker/handlers/: __init__.py  answer_handler.py  base.py  chunk_handler.py  document_handler.py  embedding_handler.py
services/worker/utils/: __init__.py  error_handling.py
shared/: __init__.py  config.py  create_collection.py  database.py  document_manager.py  infrastructure.py  logging.py  messaging.py  models.py  nats_setup.py  question_manager.py  schema.py  session_manager.py  websocket_manager.py
